<resources>
    <string name="app_name">Hotel</string>
    <string name="hotel">Отель</string>
    <string name="name_hotel">Steigenberger Makadi</string>
    <string name="about_hotel">Об отеле</string>
    <string name="essentials">Самое необходимое</string>
    <string name="to_room_selection">К выбору номера</string>
    <string name="choose_number">Выбрать номер</string>
    <string name="about_room">Подробнее о номере</string>
    <string name="booking">Бронирование</string>
    <string name="departure">Вылет из</string>
    <string name="сountry_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="buyer_information">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="name">Имя</string>
    <string name="this_data">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту</string>
    <string name="name_hint">Иван</string>
    <string name="surname_hint">Иванов</string>
    <string name="surname">Фамилия</string>
    <string name="phone_example">+7 (988) 888–88-88</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="hint_date_of_birth">15.03.2002</string>
    <string name="Citizenship">Гражданство</string>
    <string name="hint_citizenship">Российская Федерация</string>
    <string name="number_passport">Номер загранпаспорта</string>
    <string name="hint_passport_number">52 0056743</string>
    <string name="passport_validity_period">Срок действия загранпаспорта</string>
    <string name="hint_passport_validity_period">11.10.2025</string>
    <string name="tour">Тур</string>
    <string name="fuel_surcharge">Топливный сбор</string>
    <string name="service_free">Сервисный сбор</string>
    <string name="total">К оплате</string>
    <string name="currency_symbol"> ₽</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="order_has_been_paid">Заказ оплачен</string>
    <string name="order_in_progress">Ваш заказ принят в работу</string>
    <string name="super_">Супер!</string>
    <string name="order_confirmation_message">Подтверждение заказа №%1\$s может занять некоторое время (от 1 до суток). Как только мы получим ответ от туроператора, на вашу почту придет уведомление.</string>
    <string name="price_format">от %1\$s ₽</string>
    <string name="facilities_label">Удобства</string>
    <string name="included_label">Что включено</string>
    <string name="not_included_label">Что не включено</string>>
    <string-array name="tourist_names">
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
        <item>Пятый</item>
        <item>Шестой</item>
        <item>Седьмой</item>
        <item>Восьмой</item>
        <item>Девятый</item>
        <item>Десятый</item>
    </string-array>
    <string name="tourist_description">%s турист</string>
</resources>