<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginTop="8dp"
    app:cardElevation="0dp"
    android:background="@drawable/rounded_background"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleTour"
            style="@style/TextStyle16GrayDisplayMarginTop16"
            android:layout_marginStart="16dp"
            android:text="@string/tour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tourPrice"
            style="@style/TextStyle16BlackDisplay"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleFuelSurcharge"
            style="@style/TextStyle16GrayDisplayMarginTop16"
            android:text="@string/fuel_surcharge"
            app:layout_constraintStart_toStartOf="@+id/titleTour"
            app:layout_constraintTop_toBottomOf="@+id/titleTour" />

        <TextView
            android:id="@+id/FuelSurchargePrice"
            style="@style/TextStyle16BlackDisplay"
            app:layout_constraintEnd_toEndOf="@+id/tourPrice"
            app:layout_constraintTop_toTopOf="@+id/titleFuelSurcharge" />

        <TextView
            android:id="@+id/titleServiceFee"
            style="@style/TextStyle16GrayDisplayMarginTop16"
            android:text="@string/service_free"
            app:layout_constraintStart_toStartOf="@+id/titleFuelSurcharge"
            app:layout_constraintTop_toBottomOf="@+id/titleFuelSurcharge" />

        <TextView
            android:id="@+id/ServiceFreePrice"
            style="@style/TextStyle16BlackDisplay"
            app:layout_constraintEnd_toEndOf="@+id/FuelSurchargePrice"
            app:layout_constraintTop_toTopOf="@+id/titleServiceFee" />

        <TextView
            android:id="@+id/titleTotal"
            style="@style/TextStyle16GrayDisplayMarginTop16"
            android:text="@string/total"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/titleServiceFee"
            app:layout_constraintTop_toBottomOf="@+id/titleServiceFee" />

        <TextView
            android:id="@+id/TotalPrice"
            style="@style/TextStyle16BlackDisplay"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ServiceFreePrice"
            app:layout_constraintTop_toTopOf="@+id/titleTotal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>